Make the ref / unref pairs more obvious

This makes the code more readable and robust against refactorings.

https://bugzilla.gnome.org/show_bug.cgi?id=741257